fix display on mobile

--- a/src/pages/pages.module.css
+++ b/src/pages/pages.module.css
@@ -13,9 +13,9 @@
 }
 .social {
     text-align: center;
-    /* padding: 5px 15px; */
+    padding: 5% 15px;
     font-size: 0.8em;
-    margin-bottom: 5%;
+    /* margin-bottom: 5%; */
 }
 
 
